[gd_scene load_steps=6 format=3 uid="uid://bnnrj8qbygt0b"]

[ext_resource type="Script" path="res://managers/menu_manager/menu_manager.gd" id="1_a2tsr"]
[ext_resource type="PackedScene" uid="uid://hai4t5fld4u3" path="res://ui/menus/main_menu/main_menu.tscn" id="1_reui1"]
[ext_resource type="PackedScene" uid="uid://b0vu87lwvknle" path="res://ui/menus/mode_menu/mode_menu.tscn" id="2_73s13"]
[ext_resource type="PackedScene" uid="uid://c1mewoyum3n14" path="res://ui/menus/sound_menu/sound_menu.tscn" id="3_xeugc"]
[ext_resource type="PackedScene" uid="uid://dlaq77ucjvce6" path="res://ui/menus/graphics_menu/graphics_menu.tscn" id="4_xlajb"]

[node name="MenuManager" type="CanvasLayer" node_paths=PackedStringArray("main_menu", "mode_menu", "sound_menu", "graphics_menu")]
script = ExtResource("1_a2tsr")
main_menu = NodePath("MainMenu")
mode_menu = NodePath("ModeMenu")
sound_menu = NodePath("SoundMenu")
graphics_menu = NodePath("GraphicsMenu")

[node name="MainMenu" parent="." instance=ExtResource("1_reui1")]

[node name="ModeMenu" parent="." instance=ExtResource("2_73s13")]
visible = false

[node name="SoundMenu" parent="." instance=ExtResource("3_xeugc")]
visible = false

[node name="GraphicsMenu" parent="." instance=ExtResource("4_xlajb")]
visible = false
